# emovepro_backend

./: .env  .pdm-python  Dockerfile  Procfile  build.sh  db.sqlite3  emove_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
emovepro/: admin.py  apps.py
emovepro/migrations/: 0001_initial.py  0002_marca.py  0003_produto.py  0004_produto_descricao.py  0005_alter_marca_nome_alter_produto_nome.py  0006_produto_capa.py  0007_compra.py  0008_itenscompra.py  0009_itenscompra_preco.py
emovepro/models/: __init__.py  categoria.py  compra.py  marca.py  produto.py
emovepro/models/__pycache__/: compra.cpython-313.pyc.2951225925648
emovepro/serializers/: __init__.py  categoria.py  compra.py  marca.py  produto.py
emovepro/views/: __init__.py  categoria.py  compra.py  marca.py  produto.py
pagamentos/: views.py
pagamentos/views/: __init__.py  payment.py
uploader/: views.py
uploader/serializers/: image.py
usuario/: models.py  serializers.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py  0003_usuario_access_token_usuario_perfil_and_more.py
